Update 1 - Fake It Til You Make It (Simulations Project).ipynb

--- a/1 - Fake It Til You Make It (Simulations Project).ipynb
+++ b/1 - Fake It Til You Make It (Simulations Project).ipynb
@@ -1074,7 +1074,7 @@
     "\n",
     "Thus, this \"expected value\" (or, in the context of machine learning: the \"true underlying relationship\") becomes more apparent as you collect more data (i.e. \"trials\"). Let's see this in action! We will use the <code>np.random.normal()</code> function to illustrate this.\n",
     "\n",
-    "#### A.) First, plot a histogram of only 10 randomly generated samples from a normal distribution centered at 0 with a standard deviation of 1.\n",
+    "#### First, I plot a histogram of only 10 randomly generated samples from a normal distribution centered at 0 with a standard deviation of 1.\n",
     "* Tip: We used the random seed value of 321 and <code>bins=20</code>.\n",
     "* The plot does not look anything like a normal bell curve..."
    ]
